<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:visibility="visible"
    tools:context=".LocationInput">

    <TextView
        android:id="@+id/crop_recommendation"
        android:layout_width="370dp"
        android:layout_height="31dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/locationLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/farm_location"
        android:textAlignment="center"
        android:textColor="@color/normal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/locationLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crop_recommendation"
        app:layout_constraintVertical_bias="0.354" />

    <LinearLayout
        android:id="@+id/locationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/bg_inputs"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnMyLocation"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button"
            android:padding="10dp"
            android:text="@string/myLocation"
            android:textAlignment="center"
            android:textColor="@color/header"
            android:textSize="18sp"
            app:backgroundTint="@color/primary" />

        <ImageView
            android:layout_width="88dp"
            android:layout_height="93dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/location" />

        <EditText
            android:id="@+id/txtLocation"
            android:layout_width="278dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/header"
            android:hint="@string/location"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/normal"
            android:textColorHint="@color/primary"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnLocationSubmit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_button"
            android:padding="12dp"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>