<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PredictedOutput"
    android:background="@color/primary">

    <TextView
        android:id="@+id/crop_recommendation"
        android:layout_width="268dp"
        android:layout_height="56dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/outputLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:text="@string/prediction_result"
        android:textAlignment="center"
        android:textColor="@color/normal"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/outputLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crop_recommendation"
        app:layout_constraintVertical_bias="0.288" />

    <LinearLayout
        android:id="@+id/outputLinearLayout"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/bg_output"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/recommendedCrop"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/recommended_crop"
            android:textAlignment="center"
            android:textColor="@color/normal"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/crop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/header"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnHome"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>